--- a/Libraries/LibMedia/CMakeLists.txt
+++ b/Libraries/LibMedia/CMakeLists.txt
@@ -50,6 +50,9 @@ elseif (LADYBIRD_AUDIO_BACKEND STREQUAL "AUDIO_UNIT")
     target_sources(LibMedia PRIVATE Audio/PlaybackStreamAudioUnit.cpp)
     find_library(AUDIO_TOOLBOX AudioToolbox REQUIRED)
     target_link_libraries(LibMedia PRIVATE ${AUDIO_TOOLBOX})
+elseif(LADYBIRD_AUDIO_BACKEND STREQUAL "WASAPI")
+    target_sources(LibMedia PRIVATE Audio/PlaybackStreamWasapi.cpp)
+    target_link_libraries(LibMedia PRIVATE ole32 avrt winmm)
 elseif (DEFINED LADYBIRD_AUDIO_BACKEND)
     message(FATAL_ERROR "Please update ${CMAKE_CURRENT_LIST_FILE} for audio backend ${LADYBIRD_AUDIO_BACKEND}")
 else ()
