CI: Use COMMIT file in JS repl archive to determine build commit hash
The upstream workflow `head_sha` contains the wrong hash in case the
workflow was run manually against a provided commit hash. We use the
COMMIT file that cpack adds to the archive to determine the actual
commit hash that was used to build the binaries.

Note that this will only work for builds since the introduction of that
file, so we cannot process benchmarks for older commits, unfortunately.

--- a/.github/workflows/js-and-wasm-benchmarks.yml
+++ b/.github/workflows/js-and-wasm-benchmarks.yml
@@ -66,6 +66,13 @@ jobs:
           cd js-repl
           tar -xvzf ladybird-js-${{ matrix.os_name }}-${{ matrix.arch }}.tar.gz
 
+      - name: 'Determine JS repl build commit hash'
+        id: js-build-commit
+        shell: bash
+        run: |
+          commit_hash=$(cat js-repl/COMMIT)
+          echo "sha=${commit_hash}" >> "${GITHUB_OUTPUT}"
+
       - name: 'Download Wasm repl artifact'
         id: download-wasm-artifact
         uses: dawidd6/action-download-artifact@v11
@@ -111,7 +118,7 @@ jobs:
         shell: bash
         run: |
           echo '{
-              "commit": "${{ github.event.workflow_run.head_sha }}",
+              "commit": "${{ steps.js-build-commit.outputs.sha }}",
               "benchmarks_commit": "${{ steps.js-benchmarks-commit.outputs.sha }}",
               "os": "${{ matrix.os_name }}",
               "arch": "${{ matrix.arch }}",
