LibWeb: Separate use time easing functions from `EasingStyleValue`
In the future there will be different methods of creating these use-time
easing functions (e.g. from `KeywordStyleValue`s)

--- a/Libraries/LibWeb/CMakeLists.txt
+++ b/Libraries/LibWeb/CMakeLists.txt
@@ -158,6 +158,7 @@ set(SOURCES
     CSS/CSSVariableReferenceValue.cpp
     CSS/Descriptor.cpp
     CSS/Display.cpp
+    CSS/EasingFunction.cpp
     CSS/EdgeRect.cpp
     CSS/Fetch.cpp
     CSS/Flex.cpp
