CI: Don't run merge conflict labeler on forks

--- a/.github/workflows/merge-conflict-labeler.yml
+++ b/.github/workflows/merge-conflict-labeler.yml
@@ -13,9 +13,12 @@ on:
 jobs:
   auto-labeler:
     runs-on: blacksmith-2vcpu-ubuntu-2404
+    if: github.repository == 'LadybirdBrowser/ladybird'
+
     permissions:
       contents: read
       pull-requests: write
+
     steps:
       - uses: eps1lon/actions-label-merge-conflict@v3
         with:
