LibWeb: Add initial implementation of the Sanitizer API interface
For now, it is simply an empty shell.

--- a/Libraries/LibWeb/CMakeLists.txt
+++ b/Libraries/LibWeb/CMakeLists.txt
@@ -850,6 +850,7 @@ set(SOURCES
     ResizeObserver/ResizeObserverEntry.cpp
     ResizeObserver/ResizeObserverSize.cpp
     ResourceTiming/PerformanceResourceTiming.cpp
+    SanitizerAPI/Sanitizer.cpp
     SecureContexts/AbstractOperations.cpp
     Selection/Selection.cpp
     ServiceWorker/CacheStorage.cpp
