RequestServer: Move some cURL utilities to their own file
This will allow more easily using these from other files. This also lets
us hide the Windows.h header necessity in a single location, instead of
needing to remember to include it everywhre we would otherwise include
<curl/curl.h>.

--- a/Services/RequestServer/CMakeLists.txt
+++ b/Services/RequestServer/CMakeLists.txt
@@ -8,6 +8,7 @@ set(SOURCES
     Cache/DiskCache.cpp
     Cache/Utilities.cpp
     ConnectionFromClient.cpp
+    CURL.cpp
     Resolver.cpp
     WebSocketImplCurl.cpp
 )
