LibWeb: Initial implementation of MediaSession
Currently `set_microphone_active`, `set_camera_active` and
`set_screenshare_active` are left unimplemented due to missing
infrastructure.

--- a/Libraries/LibWeb/CMakeLists.txt
+++ b/Libraries/LibWeb/CMakeLists.txt
@@ -778,6 +778,7 @@ set(SOURCES
     MediaSession/Utils.cpp
     MediaSession/ChapterInformation.cpp
     MediaSession/MediaMetadata.cpp
+    MediaSession/MediaSession.cpp
     MimeSniff/MimeType.cpp
     MimeSniff/Resource.cpp
     MixedContent/AbstractOperations.cpp
