Project: Organize root directory and create docs folder
- Create docs/ directory for project documentation
- Move FORK_README.md to docs/FORK.md
- Move CLAUDE.md to docs/DEVELOPMENT.md
- Move SECURITY_AUDIT_REPORT.md to docs/SECURITY_AUDIT.md
- Move TEST_GUIDE.md to docs/TESTING.md
- Update .gitignore to exclude build artifacts (*.log, *.csv, CMakeCache.txt)
- Remove temporary files (build_output.log, full_build.log, network_audit.csv)
- Update README.md references to new doc locations

--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,11 @@ Meta/CMake/vcpkg/user-variables.cmake
 .DS_Store
 
 __pycache__
+
+# Build artifacts and temporary files
+CMakeCache.txt
+*.log
+*.csv
+CMakeFiles/
+Lagom/
+Testing/
