feat: Complete Phase 3 Day 19 - Request pause/resume, quarantine system, and PolicyGraph integration
This implements the remaining three critical components for malware policy enforcement:
request state machine with pause/resume, quarantine directory system, and PolicyGraph
integration with SecurityAlertDialog. Downloads now pause when threats are detected,
users make decisions via dialog, and policies can be remembered.

## 1. Request Pause/Resume State Machine

**New States Added (Request.h):**
- `WaitingForPolicy` - Download paused, awaiting user security decision
- `PolicyBlocked` - User chose to block the download
- `PolicyQuarantined` - File will be quarantined after download completes

**Control Methods (Request.cpp):**
- `resume_download()` - Unpauses CURL transfer with curl_easy_pause(CURLPAUSE_RECV)
- `block_download()` - Aborts transfer, clears buffer, deletes partial download
- `quarantine_download()` - Completes download then moves file to quarantine

**Incremental Scanning (Request.cpp):**
- Modified on_data_received() to scan data as it arrives (not just at completion)
- When threat detected: sends security alert, transitions to WaitingForPolicy,
  returns CURL_WRITEFUNC_PAUSE to pause transfer
- Stores security alert JSON for later quarantine operations

**State Flow:**
Init → Fetch → [threat detected] → WaitingForPolicy → [user decision] →
  Block/Quarantine/Resume → Complete

## 2. Quarantine Directory System

**New Files Created:**
- Services/RequestServer/Quarantine.h (class declaration + QuarantineMetadata struct)
- Services/RequestServer/Quarantine.cpp (complete implementation)

**Features:**
- Quarantine Directory: `~/.local/share/Ladybird/Quarantine/`
- Unique ID Generation: `YYYYMMDD_HHMMSS_<6_hex_random>` (e.g., 20250129_143052_a3f9b8)
- File Storage: `<quarantine_id>.bin` (malicious file, permissions 0400)
- Metadata Storage: `<quarantine_id>.json` (threat details, permissions 0400)
- Directory Permissions: 0700 (owner-only access)

**Meta

--- a/UI/Qt/CMakeLists.txt
+++ b/UI/Qt/CMakeLists.txt
@@ -18,7 +18,7 @@ target_sources(ladybird PRIVATE
     WebContentView.cpp
     ladybird.qrc
 )
-target_link_libraries(ladybird PRIVATE Qt::Core Qt::Gui Qt::Widgets)
+target_link_libraries(ladybird PRIVATE Qt::Core Qt::Gui Qt::Widgets sentinelservice)
 lagom_copy_runtime_dlls(ladybird)
 create_ladybird_bundle(ladybird)
 
