LibThreading/LibSync: Split out sync primitives
This commit splits out synchronization primitives from LibThreading into
LibSync. This is because LibThreading depends on LibCore, while LibCore
needs the synchronization primitives from LibThreading. This worked
while they were header only, but when I tried to add an implementation
file it ran into the circular dependency. To abstract away the pthread
implementation using cpp files is necessary so the synchronization
primitives were moved to a separate library.

--- a/Libraries/LibCore/CMakeLists.txt
+++ b/Libraries/LibCore/CMakeLists.txt
@@ -119,7 +119,7 @@ if (APPLE)
 endif()
 
 ladybird_lib(LibCore core)
-target_link_libraries(LibCore PRIVATE LibUnicode LibURL Threads::Threads)
+target_link_libraries(LibCore PRIVATE LibUnicode LibURL Threads::Threads LibSync)
 target_link_libraries(LibCore PUBLIC LibCoreMinimal)
 
 if (${CMAKE_SYSTEM_NAME} MATCHES "NetBSD")
