--- a/Tests/LibCore/CMakeLists.txt
+++ b/Tests/LibCore/CMakeLists.txt
@@ -20,7 +20,7 @@ foreach(source IN LISTS TEST_SOURCES)
     ladybird_test("${source}" LibCore)
 endforeach()
 
-target_link_libraries(TestLibCorePromise PRIVATE LibThreading)
+target_link_libraries(TestLibCorePromise PRIVATE LibThreading LibSync)
 target_link_libraries(TestLibCoreStream PRIVATE LibThreading)
 
 if(NOT WIN32)
