--- a/Libraries/CMakeLists.txt
+++ b/Libraries/CMakeLists.txt
@@ -9,6 +9,7 @@ add_subdirectory(LibIPC)
 add_subdirectory(LibJS)
 add_subdirectory(LibRegex)
 add_subdirectory(LibRequests)
+add_subdirectory(LibSync)
 add_subdirectory(LibSyntax)
 add_subdirectory(LibTest)
 add_subdirectory(LibTextCodec)
