--- a/Tests/LibThreading/CMakeLists.txt
+++ b/Tests/LibThreading/CMakeLists.txt
@@ -6,3 +6,5 @@ set(TEST_SOURCES
 foreach(source IN LISTS TEST_SOURCES)
     ladybird_test("${source}" LibThreading LIBS LibThreading)
 endforeach()
+
+target_link_libraries(TestBackgroundAction PRIVATE LibSync)
