--- a/UI/Qt/CMakeLists.txt
+++ b/UI/Qt/CMakeLists.txt
@@ -19,7 +19,7 @@ target_link_libraries(ladybird PRIVATE Qt::Core Qt::Gui Qt::Widgets)
 create_ladybird_bundle(ladybird)
 
 if (WIN32)
-    lagom_windows_bin(ladybird)
+    lagom_windows_bin(ladybird CONSOLE)
     qt_generate_deploy_script(
         TARGET ladybird
         OUTPUT_SCRIPT ladybird_deploy_script
