LibSync: Remove pthread from the RWLock interface
This commit removes any use of pthread.h from the RWLock header. It also
adds a win32 implementation of RWLock.

Support for interprocess RWLocks is left to a later PR.

Due to the API design of SRWLock the unlock methods must match the lock
method.

--- a/Libraries/LibDNS/CMakeLists.txt
+++ b/Libraries/LibDNS/CMakeLists.txt
@@ -3,4 +3,4 @@ set(SOURCES
 )
 
 ladybird_lib(LibDNS dns EXPLICIT_SYMBOL_EXPORT)
-target_link_libraries(LibDNS PRIVATE LibCore PUBLIC LibCrypto)
+target_link_libraries(LibDNS PRIVATE LibCore PUBLIC LibCrypto LibSync)
