--- a/Tests/LibCore/CMakeLists.txt
+++ b/Tests/LibCore/CMakeLists.txt
@@ -21,7 +21,7 @@ foreach(source IN LISTS TEST_SOURCES)
 endforeach()
 
 target_link_libraries(TestLibCorePromise PRIVATE LibThreading LibSync)
-target_link_libraries(TestLibCoreStream PRIVATE LibThreading)
+target_link_libraries(TestLibCoreStream PRIVATE LibThreading LibSync)
 
 if(NOT WIN32)
     # These tests use the .txt files in the current directory
