CMake: Specify no translations for Qt deploy script on Windows
When building Ladybird with the Qt UI framework on Windows, we were
getting the following warning in the CMake target post build step:
"Could not find any translations in <binary_dir>\vcpkg_installed\
x64-windows\translations\Qt6 (developer build?)". We now tell the
deploy script that we have no translations, which removes the warning.

--- a/UI/Qt/CMakeLists.txt
+++ b/UI/Qt/CMakeLists.txt
@@ -27,6 +27,7 @@ if (WIN32)
 qt_deploy_runtime_dependencies(
     EXECUTABLE $<TARGET_FILE:ladybird>
     PLUGINS_DIR $<TARGET_FILE_DIR:ladybird>
+    NO_TRANSLATIONS
 )
 ")
 
