LibWeb: Add SVGList<T> and use it for SVGTransformList
The spec defines a generic list interfaces that we can reuse. Currently
we only have SVGTransformList, but we will need this to add
SVGNumberList as well.

--- a/Libraries/LibWeb/CMakeLists.txt
+++ b/Libraries/LibWeb/CMakeLists.txt
@@ -932,6 +932,7 @@ set(SOURCES
     SVG/SVGLength.cpp
     SVG/SVGLinearGradientElement.cpp
     SVG/SVGLineElement.cpp
+    SVG/SVGList.cpp
     SVG/SVGMaskElement.cpp
     SVG/SVGMetadataElement.cpp
     SVG/SVGNumber.cpp
