LibWeb+LibGfx: Implement `SVGFEMorphologyElement`
This filter primitive is used to erode or dilate an image.

--- a/Libraries/LibWeb/CMakeLists.txt
+++ b/Libraries/LibWeb/CMakeLists.txt
@@ -927,6 +927,7 @@ set(SOURCES
     SVG/SVGFEImageElement.cpp
     SVG/SVGFEMergeElement.cpp
     SVG/SVGFEMergeNodeElement.cpp
+    SVG/SVGFEMorphologyElement.cpp
     SVG/SVGFEOffsetElement.cpp
     SVG/SVGFilterElement.cpp
     SVG/SVGFilterPrimitiveStandardAttributes.cpp
