LibWeb: Implement enough of WebXR for xrSession_end test to pass

--- a/Libraries/LibWeb/CMakeLists.txt
+++ b/Libraries/LibWeb/CMakeLists.txt
@@ -1139,9 +1139,12 @@ set(SOURCES
     WebSockets/WebSocket.cpp
     WebVTT/VTTCue.cpp
     WebVTT/VTTRegion.cpp
+    WebXR/XRLayer.cpp
+    WebXR/XRRenderState.cpp
     WebXR/XRSession.cpp
     WebXR/XRSessionEvent.cpp
     WebXR/XRSystem.cpp
+    WebXR/XRWebGLLayer.cpp
     Worker/WebWorkerClient.cpp
     XHR/EventNames.cpp
     XHR/FormData.cpp
