LibWeb/Test: Allow WPT to import .src files in script tags
This change allows WPT to import files from script withing script tags
that that use a pattern like `.src=*.html` (eg. iframe.src = "file.
html") , which can inadvertently lead to importing files that should
not be run. To prevent this, add these files to TestConfig.ini as
skipped tests. This process is currently manual.

--- a/Tests/LibWeb/TestConfig.ini
+++ b/Tests/LibWeb/TestConfig.ini
@@ -318,7 +318,6 @@ Text/input/wpt-import/webaudio/the-audio-api/the-audionode-interface/audionode-d
 Text/input/wpt-import/webaudio/the-audio-api/the-audionode-interface/audionode-disconnect-audioparam.html
 
 ; Currently always timeout
-Text/input/wpt-import/html/browsers/sandboxing/inner-iframe.html
 Text/input/wpt-import/html/browsers/sandboxing/sandbox-inherited-from-initiator-response.html
 Text/input/wpt-import/html/browsers/sandboxing/sandbox-javascript-window-open.html
 Text/input/wpt-import/html/browsers/sandboxing/sandbox-initial-empty-document-toward-same-origin.html
@@ -326,9 +325,6 @@ Text/input/wpt-import/html/browsers/sandboxing/sandbox-disallow-scripts-via-unsa
 Text/input/wpt-import/html/browsers/sandboxing/sandbox-document-open.html
 Text/input/wpt-import/html/browsers/sandboxing/sandbox-inherited-from-required-csp.html
 Text/input/wpt-import/html/browsers/sandboxing/sandbox-navigation-timing.tentative.html
-
-; Not a ref test, but a subfile of the sandbox-parse-noscript ref test
-Ref/input/wpt-import/html/browsers/sandboxing/noscript-iframe.html
 
 ; This test fails because we don't establish a stacking context when stacking context creating properties are animated
 ; with @keyframes.
@@ -354,3 +350,10 @@ Text/input/selection-over-multiple-code-units.html
 
 ; Flaky: https://github.com/LadybirdBrowser/ladybird/issues/6846
 Text/input/wpt-import/html/semantics/embedded-content/the-img-element/naturalWidth-naturalHeight-width-height.tentative.html
+
+; Support html files should not run as tests
+Ref/input/wpt-import/html/browsers/sandboxing/noscript-iframe.html
+Text/input/wpt-import/html/browsers/sandboxing/inner-iframe.html
+Text/input/wpt-import/html/browsers/sandboxing/sandbox-new-execution-context-iframe.html
+Text/input/wpt-import/html/browsers/browsing-the-web/unloading-documents/beforeunload-canceling-1.html
+Text/input/wpt-import/dom/ranges/Range-test-iframe.html
